feat(dependencies): 添加Atlas Richie AI扩展组件和相关依赖
- 引入atlas-richie-ai-bom依赖管理，支持VikingDB VectorStore组件
- 更新jackson-bom版本至3.2.1并添加jackson-annotations版本2.22
- 添加JUnit Jupiter 6平台依赖避免Boot BOM回退问题
- 在component-dependencies中添加vector-projection-dao和document-chunking相关组件
- 添加OCR解析器适配器和文档切片核心组件依赖
- 重构RerankServiceImpl使用ObjectProvider实现优雅降级
- 优化DynamicExecutor构造函数异常处理和单元测试时序问题